= 2.4.2 =

- Fixed some JSON still not conforming to strict JSON standard
- Finished ability to compile and debug Bullseye on Linux (NodeJS required to debug multiplayer)

= 2.4.1 =

- Added knapping recipe for 8 flint and obsidian arrowheads
- Fixed compatibility with Weapons Pack Gamma and AnMiTech
- Fixed potential crash when loading a stream is cancelled partway through

= 2.4.0 =

(since 2.4.0-rc.4)

- Add lead sling bullets, and bullet molds to cast them in
--- Lead bullets are faster, stronger, and more accurate ammunition than stones
- Meteoric iron sling stone damage increased to 6
- Crude arrows now have an accuracy penalty; crude bow accuracy increased to compensate
- Crude arrows can now be upgraded to flint arrows by adding feathers
- All other arrows can be upgraded by adding a new arrowhead (old arrowhead is lost)
- Custom ammo item readout re-added, now shows break chance in percent instead of lifetime projectile damage
- No longer replaces vanilla bow/spear/sling code
- Compatibility with Black Sand Megapatch mod
- API: Can now define projectile entity, spread, and speed per ammo type
- API: Renamed GetProjectileDamageOnImpact to GetProjectileDurabilityCost
- API: Renamed GetWeaponDamageOnShot to GetWeaponDurabilityCost

= 2.4.0-rc.4 =

- One more measure to fix the frozen spear bug

= 2.4.0-rc.3 =

- Another attempt at fixing the frozen spear bug
- New model for iron, meteoric, and steel spears
- Fixed incorrect inventory and ground storage positions for iron, meteoric, and steel spears
- Fixed incorrect reticle texture for longbows
- Fixed spear attack sound pitch

= 2.4.0-rc.2 =

- Fixed frozen spear fix accidentally disabling a part of the reticle sway code
- FoV fix is now properly applied to slings as well
- Improvements in compatibility with other mods
- JSON format standardised to work with tools not familiar with JSON5

= 2.4.0-rc.1 =

- Hopefully fixed floating spear bug
- Fixed higher FOV making it harder to aim